CRUD completo de Clientes y Empresas

--- a/arriendos/templates/base.html
+++ b/arriendos/templates/base.html
@@ -31,8 +31,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li><a class="dropdown-item" href="../clientes">Ver Clientes</a></li>
-                        <li><a class="dropdown-item" href="cliente-get">Agregar/Modificar Cliente</a></li>
-                        <li><a class="dropdown-item" href="#">Eliminar Cliente</a></li>
+                        <li><a class="dropdown-item" href="../newcliente">Agregar Cliente</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -41,8 +40,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li><a class="dropdown-item" href="../empresas">Ver Empresas</a></li>
-                        <li><a class="dropdown-item" href="#">Agregar/Modificar Empresas</a></li>
-                        <li><a class="dropdown-item" href="#">Eliminar Empresas</a></li>
+                        <li><a class="dropdown-item" href="../newempresa">Agregar Empresas</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -51,8 +49,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li><a class="dropdown-item" href="../arriendos">Ver Arriendos</a></li>
-                        <li><a class="dropdown-item" href="#">Agregar/Modificar Arriendos</a></li>
-                        <li><a class="dropdown-item" href="#">Eliminar Arriendos</a></li>
+                        <li><a class="dropdown-item" href="../arriendo_new">Agregar Arriendos</a></li>
                         </ul>
                     </li>
                 </ul>
