--- a/arriendos/templates/empresas.html
+++ b/arriendos/templates/empresas.html
@@ -7,51 +7,65 @@
   </style>
 <div class="container-fluid"></div>
 <h1>Empresas</h1>
-<table id="example" class="display" width="100%">
-    <thead><tr><th>id</th><th>nombre</th></tr></thead>
+<span>
+    <a href="../newempresa" class="btn btn-primary">Nueva Empresa</a>
+</span>
+<div class="table-responsive">
+<table id="example" class="table table-striped table-bordered" width="100%" >
+    <thead>
+        <tr>
+            <th>id</th>
+            <th>Nombre</th>
+            <th>Editar</th>
+            <th>Eliminar</th>
+        </tr>
+    </thead>
+    <tbody>
+    {% for elem in data %}  
+        <tr>
+            <td> {{elem.id}}</td>
+            <td> {{elem.nombre}}</td>
+            <td><p data-placement="top" data-toggle="tooltip" title="Edit">
+                <a href="/updempresa/{{elem.id}}" class="btn btn-primary btn-xs" data-title="edit" data-toogle="modal" data-target="#edit">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+                        <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
+                      </svg>
+                </a>
+                </p>
+            </td>
+            <td>
+                <p data-placement="top" data-toggle="tooltip" title="Delete">
+                    <a href="/empresa-delete/{{elem.id}}" class="btn btn-danger btn-xs" data-title="delete" data-toogle="modal" data-target="#delete">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
+                    <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
+                  </svg>
+                </a>
+            </p>
+            </td>
+        </tr>       
+    {% endfor %}
+    </tbody>    
 </table>
+</div>
 
 
     <div id="mensaje"></div>
     <div id="loading">cargando...</div>
-    
-
-<script>
-    
-
-
+ 
+<script>    
     var loading = document.getElementById('loading');
    // var mensaje = document.getElementById('mensaje');
     var boton = document.getElementById('carga_ajax');
-    
-    $( document ).ready(function() {
-    loading.style.display = 'block';
-    axios.get('http://localhost:8000/empresa-get/', {
-        responseType: 'text'
-    })
-        .then(function(res) {
-        if(res.status==200) {
-            //mensaje.innerHTML = res.data;
-            var oTblReport = $("#example")
-            
-            oTblReport.DataTable ({
-                "data" : res.data,
-            "columns": [
-            { "data": "id" },
-            { "data": "nombre" }
-        ]
-            });
-        }
-        console.log(res);
-        })
-        .catch(function(err) {
-        mensaje.innerText = 'Error de conexión ' + err;
-        })
-        .then(function() {
-        loading.style.display = 'none';
+
+    $(document).ready(function() {
+        var oTblReport = $('#example')
+        oTblReport.DataTable({
+            "search": 'Buscar',
+            "aLengthMenu":[[5,10,15,25,-1],[5,10,15,25,"All"]],
+            "iDisplayLength":5
         });
     });
-    
+
 </script>
 </div>
 {% endblock %}
