--- a/arriendos/templates/arriendo_new.html
+++ b/arriendos/templates/arriendo_new.html
@@ -1,29 +1,49 @@
 {% extends './base.html' %}
 {% block content %}
-<form method="POST" class="post-form" action="cliente-create/" id="cliente_new" name="cliente_new">{% csrf_token %}
+<script>
+    
+</script>
+<form method="POST" class="post-form" action="arriendo-create/" id="arriendo_new" name="arriendo_new">{% csrf_token %}
     <div class="container">
         <div class="form-group row">
             <label class="col-sm-1 col-form-label"></label>
             <div class="col-sm-4">
-                <h3>Nuevo Cliente</h3>
+                <h3>Nuevo Arriendo</h3>
             </div>
         </div>
         <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Nombre Cliente</label>
+            <label class="col-sm-2 col-form-label">Cliente</label>
             <div class="col-sm-4">
-                <input type="text" id="nombre" name="nombre">
+                <select name="cliente" id="cliente">
+                    <option value="0">Seleccione un cliente</option>
+                </select>
+                
             </div>
         </div>
         <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Apellido Cliente</label>
+            <label class="col-sm-2 col-form-label">Empresa</label>
             <div class="col-sm-4">
-                <input type="text" id="apellido" name="apellido">
+                <select name="empresa" id="empresa">
+                    <option value="0">Seleccione un empresa</option>
+                </select>
             </div>
         </div>
         <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Rut Cliente</label>
+            <label class="col-sm-2 col-form-label">Costo diario</label>
             <div class="col-sm-4">
-                <input type="text" id="rut" name="rut">
+                <input type="text" id="costo" name="costo">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">Días</label>
+            <div class="col-sm-4">
+                <input type="text" id="dias" name="dias">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">Fecha Arriendo</label>
+            <div class="col-sm-4">
+                <input type="date" id="fecha" name="fecha">
             </div>
         </div>
         <div class="form-group row">
@@ -38,14 +58,58 @@
 <script>
     
     $('#btn_enviar').click(function(){
-        let nombre= $('#nombre').val();
-        let apellido= $('#apellido').val();
-        let rut= $('#rut').val();
-        data='{"nombre":"'+nombre+'", "apellido":"'+apellido+'","rut":"'+rut+'"}';       
-        $('#data').val(data);           
+        let cliente= $('#cliente').children(":selected").attr('id');
+        let empresa= $('#empresa').children(":selected").attr('id');
+        let dias= $('#dias').val();
+        let costo= $('#costo').val();
+        let fecha= $('#fecha').val().split("-");
+        let new_fecha=fecha[0]+'-'+fecha[1]+'-'+fecha[2]
+
+
+        data='{"cliente":"'+cliente+'","empresa":"'+empresa+'","dias":"'+dias+'","costo_diario":"'+costo+'","fecha_arriendo":"'+new_fecha+'"}';    
+        $('#data').val(data);    
+        alert(data)
+               
         //axios.post(url, data, headers)
-        $('#cliente_new').submit();
+        $('#arriendo_new').submit();
         
     });
+
+
+    $(document).ready(function() {
+        
+    //llenamos el combo de empresas
+        axios.get('http://localhost:8000/empresa-get/', {
+            responseType: 'text'
+        })
+        .then(function(res) {
+            if(res.status==200) {
+                //mensaje.innerHTML = res.data;
+                
+                $.each(res.data, function(i,item){
+                    console.log(item.nombre)
+                    option='<option id=\"'+item.id+'\">'+item.nombre+'</option>'
+                    $('#empresa').append(option)
+                });
+            }
+        });
+        //llenamos el combo de clientes
+        axios.get('http://localhost:8000/cliente-get/', {
+            responseType: 'text'
+        })
+        .then(function(res) {
+            if(res.status==200) {
+                //mensaje.innerHTML = res.data;
+                
+                $.each(res.data, function(i,item){
+                    console.log(item.nombre)
+                    option='<option id=\"'+item.id+'\">'+item.nombre+' '+item.apellido+'</option>'
+                    $('#cliente').append(option)
+                });
+            }
+
+        });
+    });
+
 </script>
 {% endblock %}
