--- a/arriendos/templates/base.html
+++ b/arriendos/templates/base.html
@@ -11,6 +11,16 @@
     <link href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.min.css" rel="stylesheet">
     <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    rel="stylesheet"
+    >
+    <script
+    type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.js"
+  ></script>
+
+
    
 </head>
 <body>
@@ -49,7 +59,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li><a class="dropdown-item" href="../arriendos">Ver Arriendos</a></li>
-                        <li><a class="dropdown-item" href="../arriendo_new">Agregar Arriendos</a></li>
+                        <li><a class="dropdown-item" href="../newarriendo">Agregar Arriendos</a></li>
                         </ul>
                     </li>
                 </ul>
