Desafios hasta el 8 listos

--- a/arriendos/templates/arriendo_new.html
+++ b/arriendos/templates/arriendo_new.html
@@ -68,7 +68,7 @@
 
         data='{"cliente":"'+cliente+'","empresa":"'+empresa+'","dias":"'+dias+'","costo_diario":"'+costo+'","fecha_arriendo":"'+new_fecha+'"}';    
         $('#data').val(data);    
-        alert(data)
+        //alert(data)
                
         //axios.post(url, data, headers)
         $('#arriendo_new').submit();
