--- a/arriendos/templates/base.html
+++ b/arriendos/templates/base.html
@@ -61,6 +61,18 @@
                         <li><a class="dropdown-item" href="../arriendos">Ver Arriendos</a></li>
                         <li><a class="dropdown-item" href="../newarriendo">Agregar Arriendos</a></li>
                         </ul>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Desafios
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <li><a class="dropdown-item" target="_blank" href="../desafio4">Desafio 4 (getCompanyClientSortByName)</a></li>
+                                <li><a class="dropdown-item" target="_blank" href="../desafio5">Desafio 5 (getClientsSortByAmount)</a></li>
+                                <li><a class="dropdown-item" target="_blank" href="../desafio6">Desafio 6 (getCompaniesSortByProfit)</a></li>
+                                <li><a class="dropdown-item" target="_blank" href="../desafio7">Desafio 7 (getCompaniesWithRentOver1Week)</a></li>
+                                <li><a class="dropdown-item" target="_blank" href="../desafio8">Desafio 8(getClientsWithLessExpense)</a></li>
+                            </ul>
+                        </li>
                     </li>
                 </ul>
             </div>
